# Chunitools

./: .gitignore  AGENTS.md  README.md  build.py  chunitools.spec  pyproject.toml
.github/workflows/: ci.yml  release.yml
scripts/: automate_profile.py  build_vgmstream.py  download_vgmstream.py  profile_idle.py  profile_playback.py
src/: __init__.py  bootstrap.py  cli.py  config.py  const.py  main.py  model.py
src/app/: bootstrap.py
src/audio/: __init__.py  engine.py  music.py
src/audio/codecs/: __init__.py  acb.py
src/cli/: export_chart.py
src/core/: __init__.py  audio_assets.py  config.py  const.py  editor.py  editor_metadata.py  enums.py  images.py  library_models.py  library_scanner.py  metadata.py  models.py  option_export.py  read.py  write.py
src/dialogs/: __init__.py
src/dialogs/settings/: __init__.py  content.py  shared.py
src/engine/: __init__.py  hitsounds.py  playback.py  soflan.py  timeline.py
src/lib/: __init__.py
src/lib/sonic_audio_tools/: __init__.py  acb.py  afs2.py  hca.py
src/notes/: __init__.py  air.py  base.py  display.py  effects.py  factory.py  flick.py  geometry.py  hold.py  schema.py  slide.py  tap.py
src/services/: __init__.py  indexing.py  playback.py
src/shell/: __init__.py  status_bar.py
src/ui/components/: fps_overlay.py  note_debug_overlay.py  note_debug_overlay_3d.py  picker.py  picker_delegate.py  picker_model.py  play_view.py  play_view_notes.py  radar.py  viewport.py
src/ui/components/play_view/: __init__.py  geometry.py  playfield.py  view.py
src/ui/components/play_view/notes/: __init__.py  air.py  damage.py  dispatch.py  flick.py  ground.py  hold.py  mixin.py  slide.py  support.py  sustain.py
src/ui/components/timeline_view/: __init__.py  constants.py  interaction.py  render.py  scroll.py  selection.py  view.py
src/ui/components/timeline_view/notes/: air.py  damage.py  flick.py  hold.py  slide.py  support.py
src/ui/components/util/: __init__.py  play_view_geometry.py
src/ui/theme/: __init__.py  color_profile.py  notes.py  styles.py  ui.py
src/ui/view/: __init__.py  chart_renderer.py  export.py  projection.py  timeline_compat.py  timeline_widget.py
src/ui/view/renderer/: base.py
src/ui/view/renderer/notes/: __init__.py  air.py  damage.py  flick.py  heaven.py  hold.py  slide.py  support.py
src/ui/window/: __init__.py  combo_box.py  editor_actions.py  export.py  file_handler.py  inspectors.py  key_handler.py  menus.py  metadata_editor.py  note_history.py  overlay_manager.py  settings_handler.py  slide_editor.py  source_opener.py  status_widgets.py  widgets.py  window.py
src/utils/: __init__.py  audio.py  library.py  platform.py  vgmstream.py
src/workspace/: __init__.py  menubar.py
tests/: test_air_effects.py  test_air_rendering.py  test_air_slide_chains.py  test_audio_assets.py  test_bootstrap.py  test_build_vgmstream.py  test_chart_write.py  test_config.py  test_custom_audio_sources.py  test_ex_tap_symbols.py  test_export.py  test_export_cli.py  test_images.py  test_library_scanner.py  test_no_soflan_support.py  test_note_debug_overlay.py  test_note_factory.py  test_note_labels.py  test_note_shapes.py  test_notes.py  test_option_export.py  test_play_view_3d_geometry.py  test_playback_coordinator.py  test_playback_visual_smoothness.py  test_slide_rendering.py  test_soflan_projection.py  test_sonic_audio_tools.py  test_timeline_compat.py  test_toolbar_icons.py  test_vgmstream_download.py  test_window_editor.py
