[project]
name = "chunitools"
version = "0.2.2"
description = "A high-performance Chunithm chart parser and viewer"
authors = [{ name = "Polaris", email = "polaris@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "Pillow>=10.0.0",
    "qtawesome>=1.4.2",
    "py-spy>=0.4.2",
    "pyspy>=0.1.1",
    "pyflac>=3.0.0",
    "platformdirs>=4.9.6",
    "pyyaml>=6.0.3",
    "PyCriCodecsEx>=0.0.5",
]

[project.scripts]
chunitools = "src.main:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (F), Pycodestyle (E, W), and Isort (I)
select = ["F", "E", "W", "I", "N", "UP", "B", "C4"]
ignore = []

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
]
