[project]
name = "chunitools"
version = "0.3.0"
description = "A high-performance Chunithm chart parser and viewer"
authors = [{ name = "Polaris", email = "polaris@example.com" }]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6.0",
    "Pillow>=10.0.0",
    "qtawesome>=1.4.2",
    "pyflac>=3.0.0",
    "platformdirs>=4.9.6",
    "pyyaml>=6.0.3",
    "PyCriCodecsEx>=0.0.5",
]

[project.scripts]
chunitools = "src.main:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# ── Linter (ruff) ──

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",    # pyflakes — errors
    "E",    # pycodestyle — errors
    "W",    # pycodestyle — warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "TCH",  # flake8-type-checking
    "PL",   # pylint
]
ignore = [
    "E402",   # module-import-not-at-top-of-file — needed for logger pattern
    "E501",   # line-too-long — caught by formatter
    "PLR2004", # magic-value-comparison
    "SIM117",  # multiple-with-statements — readability preference
    "SIM108",  # use ternary — readability preference
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR0913", "PLR0914", "PLR0915", "TCH"]
"scripts/*" = ["TCH"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"

# ── Complexity gate ──

[tool.radon]
max-cc = "B"

# ── Type checker (mypy) ──

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.mypy.per_module_ignores]
"src/ui.window.window" = ["no-untyped-def"]

# ── Dev dependencies ──

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.13",
    "radon>=6.0.1",
    "vulture>=2.16",
    "pyinstaller>=6.0",
]
